Add movies Component

--- a/angular-frontend/src/app/components/home/home.component.html
+++ b/angular-frontend/src/app/components/home/home.component.html
@@ -55,7 +55,7 @@
       <div class="coming-soon-overlay">
         <h5>{{ movie.title }}</h5>
         <p>{{ movie.duration }} . {{ movie.genre }}</p>
-        <p>Stay Tuned</p>
+        <p class="fw-bold">Stay Tuned</p>
         <span class="coming-tag">Coming Soon</span>
       </div>
     </div>
