--- a/angular-frontend/src/styles.css
+++ b/angular-frontend/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #18191C;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  color: #FFFFFF;
+}
