--- a/angular-frontend/src/app/components/footer/footer.component.html
+++ b/angular-frontend/src/app/components/footer/footer.component.html
@@ -1,12 +1,16 @@
-<footer id="footer" class="pt-4 pb-3">
-  <div class="container">
-    <div class="cinema-description text-center mb-4">
-        <p>
-            Enjoy an unmatched cinematic experience in our modern halls equipped with the latest technology. 
-            We’re here to provide the best experience for you.
-        </p>
-    </div>
+<footer id="footer" class=" pb-3">
+  <div class="cinema-hero">
+    <img src="assets\images\cinemahall.jpg" alt="Cinema Hall" class="cinema-img" />
 
+    <div class="cinema-overlay">
+      <p>
+        Enjoy an unmatched cinematic experience in our modern halls equipped with the latest technology. 
+        We’re here to provide the best experience for you.
+      </p>
+    </div>
+  </div>
+
+  <div class="container mt-4">
     <div class="row">
       <div class="col-md-6 mb-3">
         <h5>Contact Us</h5>
@@ -23,7 +27,7 @@
         <h5>Our Location</h5>
         <iframe 
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.534335778593!2d106.70042341533478!3d10.776889992322092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f3b745e5ef1%3A0x123456789abcd!2sCinema%20World!5e0!3m2!1sen!2seg!4v1692469532505!5m2!1sen!2seg" 
-          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+          width="100%" height="200" style="border:0;" allowfullscreen loading="lazy">
         </iframe>
       </div>
     </div>
