--- a/angular-frontend/src/app/components/movies/movies.component.html
+++ b/angular-frontend/src/app/components/movies/movies.component.html
@@ -17,7 +17,7 @@
       
         <div class="card-overlay">
           <h5>{{ movie.title }}</h5>
-          <p>{{ movie.duration }} • {{ movie.genre }} • {{ movie.year }}</p>
+          <p>{{ movie.duration }} | {{ movie.genre }} | {{ movie.year }}</p>
       
           @if (movie.status === 'NowShowing') {
             <button class="btn btn-slider">Get Ticket</button>
