--- a/angular-frontend/src/app/components/showtimes/showtimes.component.html
+++ b/angular-frontend/src/app/components/showtimes/showtimes.component.html
@@ -24,13 +24,26 @@
       <img [src]="movie.posterUrl" alt="{{ movie.title }}" width="100" height="150" class="me-3">
       <div class="showtime-info">
         <h4 class="text-light">{{ movie.title }}</h4>
-        <p>{{ movie.genre }} • {{ movie.duration }} • {{ movie.year }}</p>
+        <p >{{ movie.genre }} | {{ movie.duration }} | {{ movie.year }}</p>
       </div>
     </div>
-
     <div class="showtime-times mt-3">
-      <button class="btn btn-outline-info me-2 mb-2" *ngFor="let time of s.times">
+      <button 
+        class="btn me-2 mb-2"
+        *ngFor="let time of s.times"
+        [ngClass]="{
+          'selected': selectedTimes[s.id] === time,
+          'btn-outline-info': selectedTimes[s.id] !== time,
+        }"
+        (click)="selectTime(s.id, time)">
         {{ time }}
+      </button>
+    </div>
+    <div class="mt-3">
+      <button 
+        class="btn get-tickets-btn" 
+        [disabled]="!selectedTimes[s.id]">
+        Get Tickets
       </button>
     </div>
   </div>
