--- a/angular-frontend/src/app/components/movies/movies.component.html
+++ b/angular-frontend/src/app/components/movies/movies.component.html
@@ -1,61 +1,61 @@
-<div class="container py-5">
-  <h3 class="mb-4 text-center text-light ">Movies</h3>
-  <div class="filter-box mb-3 text-center">
-    <select id="statusFilter" [(ngModel)]="statusFilter" (change)="applyFilters()">
-      <option value="All">All</option>
-      <option value="NowShowing">Now Showing</option>
-      <option value="ComingSoon">Coming Soon</option>
-    </select>
-  </div>
-  <div class="search-box mb-4">
-    <input
-      type="text"
-      [(ngModel)]="searchTerm"
-      (input)="applyFilters()"
-      placeholder="Search movies..."
-    />
-  </div>
+  <div class="container py-5">
+    <h3 class="mb-4 text-center text-light ">Movies</h3>
+    <div class="filter-box mb-3 text-center">
+      <select id="statusFilter" [(ngModel)]="statusFilter" (change)="onFilterChange()">
+        <option value="All">All</option>
+        <option value="NowShowing">Now Showing</option>
+        <option value="ComingSoon">Coming Soon</option>
+      </select>
+    </div>
+    <div class="search-box mb-4">
+      <input
+        type="text"
+        [(ngModel)]="searchTerm"
+        (input)="onFilterChange()"
+        placeholder="Search movies..."
+      />
+    </div>
 
-  <div class="movie-cards" *ngIf="pagedMovies.length > 0; else noMovies">
-    <div *ngFor="let movie of pagedMovies; trackBy: trackByMovieId" class="movie-card">
-      <img [src]="movie.posterUrl" alt="{{ movie.title }}" class="card-img" />
-      <span class="status-badge" [ngClass]="movie.status === 'NowShowing' ? 'now' : 'coming'">
-        {{ movie.status === 'NowShowing' ? 'Now Showing' : 'Coming Soon' }}
-      </span>
-      <div class="card-overlay">
-        <h5>{{ movie.title }}</h5>
-        <p>{{ movie.duration }} | {{ movie.genre }} | {{ movie.year }}</p>
+    <div class="movie-cards" *ngIf="pagedMovies.length > 0; else noMovies">
+      <div *ngFor="let movie of pagedMovies; trackBy: trackByMovieId" class="movie-card">
+        <img [src]="movie.posterUrl" alt="{{ movie.title }}" class="card-img" />
+        <span class="status-badge" [ngClass]="movie.status === 'NowShowing' ? 'now' : 'coming'">
+          {{ movie.status === 'NowShowing' ? 'Now Showing' : 'Coming Soon' }}
+        </span>
+        <div class="card-overlay">
+          <h5>{{ movie.title }}</h5>
+          <p>{{ movie.duration }} | {{ movie.genre }} | {{ movie.year }}</p>
 
-        <button *ngIf="movie.status === 'NowShowing'" class="btn btn-slider" [routerLink]="['/movies', movie.id]">
-          Get Ticket
-        </button>
-        <div *ngIf="movie.status !== 'NowShowing'" class="stay-tuned">
-          Stay Tuned
+          <button *ngIf="movie.status === 'NowShowing'" class="btn btn-slider" [routerLink]="['/movies', movie.id]">
+            Get Ticket
+          </button>
+          <div *ngIf="movie.status !== 'NowShowing'" class="stay-tuned">
+            Stay Tuned
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <ng-template #noMovies>
-    <p class="text-center text-light mt-5">No movies found </p>
-  </ng-template>
+    <ng-template #noMovies>
+      <p class="text-center text-light mt-5">No movies found </p>
+    </ng-template>
 
-  <div class="pagination-controls mt-4">
-    <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1">
-      ‹
-    </button>
-
-    <span *ngFor="let p of [].constructor(totalPages); let i = index">
-      <button
-        [class.active]="currentPage === i + 1"
-        (click)="changePage(i + 1)"
-      >
-        {{ i + 1 }}
+    <div class="pagination-controls mt-4">
+      <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1">
+        ‹
       </button>
-    </span>
 
-    <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">
-      ›
-    </button>
+      <span *ngFor="let p of [].constructor(totalPages); let i = index">
+        <button
+          [class.active]="currentPage === i + 1"
+          (click)="changePage(i + 1)"
+        >
+          {{ i + 1 }}
+        </button>
+      </span>
+
+      <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages">
+        ›
+      </button>
+    </div>
   </div>
-</div>
